<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center|top"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:contentDescription="@string/text_fname"
                android:src="@mipmap/ic_launcher"/>

            <LinearLayout
                android:id="@+id/ll_change_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="bottom|end"
                android:background="@drawable/bg_circle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/text_fname"
                    android:src="@drawable/ic_edit_profile"/>
            </LinearLayout>
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_fname"
                android:inputType="text"
                android:textColor="@drawable/textview_colors" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_lname"
                android:inputType="text"
                android:textColor="@drawable/textview_colors" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_email"
                android:inputType="text"
                android:textColor="@drawable/textview_colors" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_contact"
                android:inputType="text"
                android:textColor="@drawable/textview_colors" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:background="@drawable/btn_bg_shape"
            android:text="Update Profile"/>

    </LinearLayout>
</ScrollView>