<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cdl_main_layout"
    ndroid="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F8F7"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/apl_prop_detail"
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/ctl_prop_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/CompetitionsToolCollapse"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@style/CompetitionsToolExpand"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_collapse_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_prop_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin" />

            <TextView
                android:id="@+id/tv_prop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="27sp" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_prop_address"
                        android:textAllCaps="true"
                        android:textColor="#c0995b"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_prop_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#030303"
                        android:textSize="17sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_prop_size"
                        android:textAllCaps="true"
                        android:textColor="@color/colorC0995B"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_prop_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|bottom"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_prop_type"
                        android:textAllCaps="true"
                        android:textColor="@color/colorC0995B"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_prop_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|bottom"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />
                </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textAllCaps="true"
                            android:textColor="#C0995B"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_prop_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start|bottom"
                            android:textColor="@android:color/black"
                            android:textSize="17sp" />
                    </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="60dp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>